# agent-qa-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/: normalizer.py  sample_support_agent.py
cases/: support_cases.jsonl
domain/: fixtures.py  support_tools.py
evaluators/: base.py  tool_correctness.py
runners/: run_experiment.py
schemas/: case.py  results.py  run_record.py
tests/: test_normalizer.py  test_tool_correctness.py
